# simple-ftp

./: CMakeLists.txt  README.md  users_example.txt
cmake/: options.cmake  settings.cmake  showoptions.cmake
src/client/: CMakeLists.txt  admin.c  command_handler.c  command_utils.c  header.h  main.c
src/server/: CMakeLists.txt  builtin.c  builtin.h  command.c  command.h  common.h  context.c  context.h  main.c  message.c  message.h  user.c  user.h  utils.c  utils.h
